CHANGES.txt - 2009-04-29
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- Added complete localizations for German, Japanese, Polish, and
	  Russian and partial localizations for Chinese, Danish, Finnish,
	  French, Italian, Korean, Norwegian, Portuguese, and Swedish
	  (STR #3096, STR #3098, STR #3109, STR #3111, STR #3141)
	- Moving jobs in the web interface now shows an error if you only have
	  one printer or class added (STR #3094)
	- Since classes have never truly supported the printer-error-policy
	  stuff added in CUPS 1.2, update the code to reflect the current
	  reality and support only the retry-current-job policy for now
	  (STR #3171)
	- Revised the password callback support (STR #2953)
	- ppdEmit*() did not choose between PageSize and PageRegion properly.
	- Make some fairly substantial changes to the Kerberos support code so
	  that CUPS can work in multi-realm environments and does not require
	  delegatable credentials.  Shared printing still requires delegation,
	  however "delegation by policy" can be enabled in the KDC to make this
	  all work.
	- "AccessLogLevel actions" did not hide client-error-not-found errors.
	- AP_FIRST_InputSlot did not work with number-up.
	- cupsBackChannelRead() and cupsBackChannelWrite() could fail due to a
	  lack of kernel buffers.
	- The IPP and LPD backends did not respond to side-channel requests
	  while copying print data to a temporary file.
	- cupsWriteRequestData() flushed the output buffer unnecessarily,
	  causing reduced performance in some situations.
	- If a CGI process died before sending its MIME headers, the request
	  would hang on the client.
	- The printer/class/job search feature on the web interface did not
	  work (STR #3132)
	- The scheduler did not write the printers out for classes.
	- CUPS-Get-PPDs did not work properly when filtering by language,
	  product, or psversion (STR #3136)